# heasoft-6.20

./: CMakeLists.txt  HEASOFT-INSTALL.TXT  Release_Notes_6.20
BUILD_DIR/: BuildLib.cmake  Makefile  configure  configure.in  fermi-init.csh  fermi-init.sh  fermi-setup.in  gencmake  hmakerc  hwrap  makedef.pl
BUILD_DIR/binary/: Makefile  configure  configure.in
Xspec/BUILD_DIR/: Makefile  configure  configure.in  hd_config_info  hd_install.c  hmakerc.in
Xspec/Integral/: Integral.cxx  Makefile  SPI_Data.cxx  SPI_Response.cxx
Xspec/src/XSFit/FitMethod/Minuit/minuit2/doc/: Doxyfile  Makefile  Makefile.am  Makefile.in
attitude/BUILD_DIR/: Makefile  configure  hd_config_info
attitude/help/: Makefile  attitude.html
attitude/lib/: Makefile
attitude/tasks/: Makefile
attitude/xml/: sources.tgz  standard-html.xsl
demo/BUILD_DIR/: Makefile  hd_config_info  headas-init.sh  hmakerc.in
demo/cdemo/: Makefile  cdemo.c  cdemo.par  printsub.c
demo/f77demo/: Makefile  f77demo.f  f77demo.html  f77demo.par  f77demo_main.c
demo/help/: Makefile  demo.html
demo/perldemo/: Makefile  perldemo  perldemo.html  perldemo.par  perldemo_utils.pl
demo/perldemo2/: Makefile  perldemo2  perldemo2.html  perldemo2.par
ftools/BUILD_DIR/: Makefile  configure  configure.in  hd_config_info  headas-init.csh  hmakerc.in
ftools/asca/: Makefile  README  asca.par
ftools/ascalib/: Makefile
ftools/bin.perl/: Makefile  interface.pl  parselog.pl  utils.pl
ftools/callib/: Makefile
ftools/caltools/: Makefile  README  caltools.par  caltools_dispatch.cin  caltools_ln.shin
ftools/einstein/: Makefile  einstein.par
ftools/exosat/: Makefile  README
ftools/fimage/: Makefile  README  fimage.par
ftools/ftoolslib/: Makefile
ftools/futils/: Makefile  README  futils.par
ftools/gro/: Makefile  gro.par
ftools/grolib/: Makefile
ftools/guis/: Makefile
ftools/guis/fitsTcl/: Makefile  Makefile.in  README  ReleaseNotes  configure  configure.in  fitsCmds.c  fitsIO.c  fitsInit.c  fitsTcl.c  fitsTcl.h  fitsTcl.html  fitsTclInt.h  fitsUtils.c  fvTcl.c  tclShared.c
ftools/heao1/: Makefile
ftools/heasarc/: Makefile  README  heasarc.par  heasarc_dispatch.cin  heasarc_ln.shin
ftools/image/: Makefile
ftools/include/: Makefile  cfitsio.h  ftools.h  ftoolstruct.h  pctype.h  pfile.h
ftools/oso8/: Makefile
ftools/qdp/: .cache  .menu  Makefile  bug1.qdp  bug2.qdp  bugs.txt  cod.f  cod.hlp  demo.f  demo.qdp  demo1.mod  demo1.qdp  fact.cod  fig01.qdp  fig02.pco  fig02.qdp  fig03.mod  fig03.pco  fig03.qdp  fig04.pco  fig04.qdp  fig05.pco  fig05.qdp  fig06.f  fig06.qdp  fig07.cod  fig07.f  fig07.mod  fig07.qdp  fig07e.pco  fig08.pco  fig08.qdp  fig09.qdp  fig10.pco  fig10.qdp  fig11.qdp  fig12.qdp  future.txt  grtest.qdp  hlptex.f  (+12 more)
ftools/refdata/: Makefile  de200_old.fits  h1_nh.fits  hkconv.fits  scc_to_utc2.tfits  vp_list.fits
ftools/rosat/: Makefile  README  rosat.par
ftools/roslib/: Makefile
ftools/spectral/: Makefile
ftools/time/: Makefile  README  time.par
ftools/vela5b/: Makefile  vela5b.par
ftools/xanlib/: Makefile  changes  makefile.xan
ftools/xselect/: Makefile  xselect.txt
ftools/xstar/: Makefile  README
ftools/xte/: Makefile  xte.par
ftools/xtelib/: Makefile
heacore/: CMakeLists.txt
heacore/Astro-FITS-CFITSIO/: CFITSIO.pm  CFITSIO.xs  ChangeLog  INSTALL  MANIFEST  META.yml  Makefile.PL  README  typemap  util.c
heacore/BUILD_DIR/: Makefile  Makefile-CCfits  configure  configure.in  hd_config_info  hmake_hd  hmakerc.in
heacore/heautils/: CMakeLists.txt  HDgtcalf.c  HDgtcalf.html  Makefile  headas_gti.html  headas_parstamp.c
heacore/heautils/perl/: Changes  HEAUTILS.pm  HEAUTILS.xs  MANIFEST  Makefile.PL  test.pl  typemap.old
heacore/heautils/ut/: Makefile  heautils_test.c  test_readonly.fits
heacore/hoops/: CMakeLists.txt  Makefile  hoops.ps  hoops.tex  hoops_ape.cxx  hoops_exception.cxx  hoops_group.cxx  hoops_lim_test.cxx  hoops_limits.cxx  hoops_par.cxx  hoops_par_test.cxx  hoops_par_test.par  hoops_pil.cxx  hoops_prim.cxx  hoops_prim_test.cxx  hoops_prompt_group.cxx  hoops_sample.cxx  hoops_sample.par  hoops_test  limtester  partester  primtester
heacore/hoops/hoops/: hoops.h  hoops_ape.h  hoops_ape_factory.h  hoops_exception.h  hoops_group.h  hoops_itor.h  hoops_limits.h  hoops_numeric_limits.h  hoops_par.h  hoops_pil.h  hoops_pil_factory.h  hoops_prim.h  hoops_prompt_group.h
heacore/hoops/outref/: hoops_par_test.par
heacore/pil/: CMakeLists.txt  ISDCcopy.c  ISDCcopy.par  Makefile.HEAdas  README  VERSION  cvector.c  cvector.par  makeHEAdas  makeisdc1.in  pget.c  pil.c  pil.h  pil_error.c  pil_error.h  pil_f90_api.f90  pil_f90_bind.c  pil_f90_unix.f90  pil_gen_c_code.c  pil_lint.c  pil_sys.c  pil_test.c  pil_test.par  pilcdemo.c  pilcdemo.par  pilfdemo.f90  pilfdemo.par  plist.c  pquery2.c  pset.c  punlearn.c
heacore/pil/ac_stuff/: Makefile  Makefile.in  configure  configure.in  isdc_install.c
heacore/pil/ac_stuff/autoconf/: configure
heacore/pil/doc/: pil.dvi  pil.ps  pil.tex  pilannex.tex  pilc.tex  pilf90.tex  pilstarted.tex
heacore/pil/perl/: Av_CharPtrPtr.c  Changes  INSTALL  MANIFEST  Makefile.PL  PIL.pm  PIL.xs  test.pl  typemap
heacore/pil/unit_test/: README.test
heasim/: README  run_sim.sh
heatools/: CMakeLists.txt
hitomi/: Hitomi_V005_Change_Summary.txt  Hitomi_V005a_Change_Summary.txt  README
nustar/: Makefile
tcltk/BUILD_DIR/: Makefile  configure  configure.in  hd_config_info  headas-setup.in  hmakerc.in
tcltk/pow/: HOWTO  Makefile  Makefile.develop  Makefile.in  Notifications.tcl  POWplot  POWplot.tcl  PowCanvCurve.c  PowCmdsClass.tcl  PowColormap.c  PowCommands.c  PowCreateCurve.c  PowCreateData.c  PowCreateGraph.c  PowCreateImage.c  PowCreateVector.c  PowDrvr.c  PowEventHandlers.c  PowGrid.c  PowInit.c  PowUtils.c  PowWCS.c  Region.tcl  RegionList.tcl  Release_Notes  Scripting.html  Shape.tcl  Visu_Init.c  Visu_colors.c  Visu_generic.c  Visu_license.terms  Visu_lut.c  Visu_shared_colors.c  Visu_tkImgPict.c  configure  configure.in  html_library.tcl  makefile.bc5  makefile.vc  makefile_plugin.bc5  (+25 more)
(+10663 files in other folders)
